// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON serializer preset should render serialize and deserialize converters 1`] = `
"[JsonConverter(typeof(TestConverter))]
public partial class Test
{
  private string stringProp;
  private const string? constStringProp = \\"abc\\";
  private double? numberProp;
  private EnumTest? enumProp;
  private NestedTest? objectProp;
  private Dictionary<string, dynamic>? additionalProperties;

  public string StringProp 
  {
    get { return stringProp; }
    set { this.stringProp = value; }
  }

  public string? ConstStringProp 
  {
    get { return constStringProp; }
  }

  public double? NumberProp 
  {
    get { return numberProp; }
    set { this.numberProp = value; }
  }

  public EnumTest? EnumProp 
  {
    get { return enumProp; }
    set { this.enumProp = value; }
  }

  public NestedTest? ObjectProp 
  {
    get { return objectProp; }
    set { this.objectProp = value; }
  }

  public Dictionary<string, dynamic>? AdditionalProperties 
  {
    get { return additionalProperties; }
    set { this.additionalProperties = value; }
  }


    public string Serialize()
    {
      return this.Serialize(null);
    }
    public string Serialize(JsonSerializerOptions options = null) 
    {
      return JsonSerializer.Serialize(this, options);
    }
    public static Test Deserialize(string json, JsonSerializerOptions options = null)
    {
      return JsonSerializer.Deserialize<Test>(json, options);
    }
}

internal class TestConverter : JsonConverter<Test>
{
  public override Test Read(ref Utf8JsonReader reader, System.Type typeToConvert, JsonSerializerOptions options)
  {
    if (reader.TokenType != JsonTokenType.StartObject)
    {
      throw new JsonException();
    }

    var instance = new Test();
  
    while (reader.Read())
    {
      if (reader.TokenType == JsonTokenType.EndObject)
      {
        return instance;
      }

      // Get the key.
      if (reader.TokenType != JsonTokenType.PropertyName)
      {
        throw new JsonException();
      }

      string propertyName = reader.GetString();

      // Advance to the value token
      reader.Read();
      if (propertyName == \\"string prop\\")
        {
          instance.StringProp = JsonSerializer.Deserialize<string>(ref reader);
          continue;
        }
      if (propertyName == \\"numberProp\\")
        {
          instance.NumberProp = JsonSerializer.Deserialize<double?>(ref reader);
          continue;
        }
      if (propertyName == \\"enumProp\\")
        {
          instance.EnumProp = EnumTestExtensions.FromJsonToEnumTest(JsonSerializer.Deserialize<dynamic>(ref reader));
          continue;
        }
      if (propertyName == \\"objectProp\\")
        {
          instance.ObjectProp = JsonSerializer.Deserialize<NestedTest>(ref reader);
          continue;
        }
      if(instance.AdditionalProperties == null) { instance.AdditionalProperties = new Dictionary<string, dynamic>(); }
            var deserializedValue = JsonSerializer.Deserialize<Dictionary<string, dynamic>?>(ref reader);
            instance.AdditionalProperties.Add(propertyName, deserializedValue);
            continue;
    }
  
    throw new JsonException();
  }
  public override void Write(Utf8JsonWriter writer, Test value, JsonSerializerOptions options)
  {
    var properties = value?.GetType().GetProperties().Where(prop => prop.Name != \\"AdditionalProperties\\");
  
    writer.WriteStartObject();

    if(value?.StringProp != null) {
      // write property name and let the serializer serialize the value itself
      writer.WritePropertyName(\\"string prop\\");
      JsonSerializer.Serialize(writer, value?.StringProp, options);
    }
    if(value?.ConstStringProp != null) {
      // write property name and let the serializer serialize the value itself
      writer.WritePropertyName(\\"const string prop\\");
      JsonSerializer.Serialize(writer, value?.ConstStringProp, options);
    }
    if(value?.NumberProp != null) {
      // write property name and let the serializer serialize the value itself
      writer.WritePropertyName(\\"numberProp\\");
      JsonSerializer.Serialize(writer, value?.NumberProp, options);
    }
    if(value?.EnumProp != null) {
      // write property name and let the serializer serialize the value itself
      writer.WritePropertyName(\\"enumProp\\");
      writer.WriteRawValue(value?.EnumProp?.GetRawJsonValue(), true);
    }
    if(value?.ObjectProp != null) {
      // write property name and let the serializer serialize the value itself
      writer.WritePropertyName(\\"objectProp\\");
      JsonSerializer.Serialize(writer, value?.ObjectProp, options);
    }
    // Unwrap dictionary properties
    if (value?.AdditionalProperties != null) {
      foreach (var unwrappedProperty in value?.AdditionalProperties)
      {
        // Ignore any unwrapped properties which might already be part of the core properties
        if (properties.Any(prop => prop.Name == unwrappedProperty.Key))
        {
            continue;
        }
        // Write property name and let the serializer serialize the value itself
        writer.WritePropertyName(unwrappedProperty.Key);
        JsonSerializer.Serialize(writer, unwrappedProperty.Value, options);
      }
    }

    writer.WriteEndObject();
  }
}"
`;

exports[`JSON serializer preset should render serialize and deserialize converters 2`] = `
"public enum EnumTest
{
  SOME_SPACE_ENUM_SPACE_STRING,
  RESERVED_TRUE,
  CURLYLEFT_QUOTATION_TEST_QUOTATION_COLON_QUOTATION_TEST_QUOTATION_CURLYRIGHT,
  NUMBER_2,
  SQUARELEFT_QUOTATION_TEST_QUOTATION_COMMA_1_SQUARERIGHT,
  RESERVED_NULL
}
  public static class EnumTestExtensions
  {
    public static dynamic? GetValue(this EnumTest enumValue)
    {
      switch (enumValue)
      {
        case EnumTest.SOME_SPACE_ENUM_SPACE_STRING: return \\"Some enum String\\";
        case EnumTest.RESERVED_TRUE: return true;
        case EnumTest.CURLYLEFT_QUOTATION_TEST_QUOTATION_COLON_QUOTATION_TEST_QUOTATION_CURLYRIGHT: return \\"{\\\\\\"test\\\\\\":\\\\\\"test\\\\\\"}\\";
        case EnumTest.NUMBER_2: return 2;
        case EnumTest.SQUARELEFT_QUOTATION_TEST_QUOTATION_COMMA_1_SQUARERIGHT: return \\"[\\\\\\"test\\\\\\",1]\\";
        case EnumTest.RESERVED_NULL: return null;
      }
      return null;
    }

    public static EnumTest? ToEnumTest(dynamic? value)
    {
      switch (value)
      {
        case \\"Some enum String\\": return EnumTest.SOME_SPACE_ENUM_SPACE_STRING;
        case true: return EnumTest.RESERVED_TRUE;
        case \\"{\\\\\\"test\\\\\\":\\\\\\"test\\\\\\"}\\": return EnumTest.CURLYLEFT_QUOTATION_TEST_QUOTATION_COLON_QUOTATION_TEST_QUOTATION_CURLYRIGHT;
        case 2: return EnumTest.NUMBER_2;
        case \\"[\\\\\\"test\\\\\\",1]\\": return EnumTest.SQUARELEFT_QUOTATION_TEST_QUOTATION_COMMA_1_SQUARERIGHT;
        case null: return EnumTest.RESERVED_NULL;
      }
      return null;
    }

    public static string? GetRawJsonValue(this EnumTest enumValue)
    {
      switch (enumValue)
      {
       case EnumTest.SOME_SPACE_ENUM_SPACE_STRING: return \\"Some enum String\\";
       case EnumTest.RESERVED_TRUE: return \\"true\\";
       case EnumTest.CURLYLEFT_QUOTATION_TEST_QUOTATION_COLON_QUOTATION_TEST_QUOTATION_CURLYRIGHT: return \\"{\\\\\\"test\\\\\\":\\\\\\"test\\\\\\"}\\";
       case EnumTest.NUMBER_2: return \\"2\\";
       case EnumTest.SQUARELEFT_QUOTATION_TEST_QUOTATION_COMMA_1_SQUARERIGHT: return \\"[\\\\\\"test\\\\\\",1]\\";
       case EnumTest.RESERVED_NULL: return \\"null\\";
      }
      return null;
    }

    public static dynamic? FromJsonToEnumTest(JsonElement? value)
    {
      if (value?.ValueKind == JsonValueKind.String && value?.GetString() == \\"Some enum String\\")
      {
        return EnumTest.SOME_SPACE_ENUM_SPACE_STRING;
      }
      if (value?.ValueKind == JsonValueKind.True || value?.ValueKind == JsonValueKind.False && value?.GetBoolean() == true)
      {
        return EnumTest.RESERVED_TRUE;
      }
      if (value?.ValueKind == JsonValueKind.Object && value?.GetRawText() == \\"{\\\\\\"test\\\\\\":\\\\\\"test\\\\\\"}\\")
      {
        return EnumTest.CURLYLEFT_QUOTATION_TEST_QUOTATION_COLON_QUOTATION_TEST_QUOTATION_CURLYRIGHT;
      }
      if (value?.ValueKind == JsonValueKind.Number && value?.GetInt32() == 2)
      {
        return EnumTest.NUMBER_2;
      }
      if (value?.ValueKind == JsonValueKind.Array && value?.GetRawText() == \\"[\\\\\\"test\\\\\\",1]\\")
      {
        return EnumTest.SQUARELEFT_QUOTATION_TEST_QUOTATION_COMMA_1_SQUARERIGHT;
      }
      if (value == null || value?.ValueKind == JsonValueKind.Null && value?.GetRawText() == \\"null\\")
      {
        return EnumTest.RESERVED_NULL;
      }
      return null;
    }
  }
"
`;

exports[`JSON serializer preset should render serialize and deserialize converters 3`] = `
"[JsonConverter(typeof(NestedTestConverter))]
public partial class NestedTest
{
  private string? stringProp;
  private Dictionary<string, dynamic>? additionalProperties;

  public string? StringProp 
  {
    get { return stringProp; }
    set { this.stringProp = value; }
  }

  public Dictionary<string, dynamic>? AdditionalProperties 
  {
    get { return additionalProperties; }
    set { this.additionalProperties = value; }
  }


    public string Serialize()
    {
      return this.Serialize(null);
    }
    public string Serialize(JsonSerializerOptions options = null) 
    {
      return JsonSerializer.Serialize(this, options);
    }
    public static NestedTest Deserialize(string json, JsonSerializerOptions options = null)
    {
      return JsonSerializer.Deserialize<NestedTest>(json, options);
    }
}

internal class NestedTestConverter : JsonConverter<NestedTest>
{
  public override NestedTest Read(ref Utf8JsonReader reader, System.Type typeToConvert, JsonSerializerOptions options)
  {
    if (reader.TokenType != JsonTokenType.StartObject)
    {
      throw new JsonException();
    }

    var instance = new NestedTest();
  
    while (reader.Read())
    {
      if (reader.TokenType == JsonTokenType.EndObject)
      {
        return instance;
      }

      // Get the key.
      if (reader.TokenType != JsonTokenType.PropertyName)
      {
        throw new JsonException();
      }

      string propertyName = reader.GetString();

      // Advance to the value token
      reader.Read();
      if (propertyName == \\"stringProp\\")
        {
          instance.StringProp = JsonSerializer.Deserialize<string?>(ref reader);
          continue;
        }
      if(instance.AdditionalProperties == null) { instance.AdditionalProperties = new Dictionary<string, dynamic>(); }
            var deserializedValue = JsonSerializer.Deserialize<Dictionary<string, dynamic>?>(ref reader);
            instance.AdditionalProperties.Add(propertyName, deserializedValue);
            continue;
    }
  
    throw new JsonException();
  }
  public override void Write(Utf8JsonWriter writer, NestedTest value, JsonSerializerOptions options)
  {
    var properties = value?.GetType().GetProperties().Where(prop => prop.Name != \\"AdditionalProperties\\");
  
    writer.WriteStartObject();

    if(value?.StringProp != null) {
      // write property name and let the serializer serialize the value itself
      writer.WritePropertyName(\\"stringProp\\");
      JsonSerializer.Serialize(writer, value?.StringProp, options);
    }
    // Unwrap dictionary properties
    if (value?.AdditionalProperties != null) {
      foreach (var unwrappedProperty in value?.AdditionalProperties)
      {
        // Ignore any unwrapped properties which might already be part of the core properties
        if (properties.Any(prop => prop.Name == unwrappedProperty.Key))
        {
            continue;
        }
        // Write property name and let the serializer serialize the value itself
        writer.WritePropertyName(unwrappedProperty.Key);
        JsonSerializer.Serialize(writer, unwrappedProperty.Value, options);
      }
    }

    writer.WriteEndObject();
  }
}"
`;
